--- a/web/exercicios/list_produtos.html
+++ b/web/exercicios/list_produtos.html
@@ -12,11 +12,9 @@
 </head>
 <body>
 <h1>Produtos</h1>
-
-<button id="btn-load" onclick="getProdutos()">Carregar (GET)</button>
 <!--<button id="btn-create" onclick="createPost()">Criar (POST)</button>-->
 <div id="error" class="error"></div>
-<div id="list"></div>
+<div id="list" class="list"></div>
 <!-- From Uiverse.io by bociKond -->
 <div id="spinner" class="spinner">
   <div></div>
@@ -27,9 +25,37 @@
   <div></div>
 </div>
 
-<div class="d-flex justify-content-center gap-3 mt-3">
-  <button onclick="prevPage()">⬅ Anterior</button>
-  <button onclick="nextPage()">Próxima ➡</button>
+<div class="d-flex justify-content-center gap-4 mt-5">
+<!-- From Uiverse.io by gharsh11032000 -->
+<button onclick="prevPage()" class="animated-button-left">
+  <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
+    <path
+      d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
+    ></path>
+  </svg>
+  <span class="text">Previous Page</span>
+  <span class="circle"></span>
+  <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
+    <path
+      d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
+    ></path>
+  </svg>
+</button>
+<button onclick="nextPage()" class="animated-button">
+  <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
+    <path
+      d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
+    ></path>
+  </svg>
+  <span class="text">Next Page</span>
+  <span class="circle"></span>
+  <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
+    <path
+      d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
+    ></path>
+  </svg>
+</button>
+
 </div>
 
 
